--- a/my portfolio.html
+++ b/my portfolio.html
@@ -32,13 +32,13 @@
                 They work with programming languages like HTML, CSS, and JavaScript to create dynamic, responsive sites. 
                 Web developers also optimize websites for performance, security, and cross-browser compatibility.</p>
             <div class="social-media">
-                <a href="#"><i class="bi bi-linkedin"></i></a>
-                <a href="#"><i class="bi bi-github"></i></a>
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="#"><i class="bi bi-twitter-x"></i></a>
-                <a href="#"><i class="bi bi-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/basavaraju27/"><i class="bi bi-linkedin"></i></a>
+                <a href="https://github.com/basavaraju27"><i class="bi bi-github"></i></a>
+                <a href="https://www.facebook.com/basavaraju.sullebaibasaraju"><i class="bi bi-facebook"></i></a>
+                <a href="https://x.com/R24271Raju"><i class="bi bi-twitter-x"></i></a>
+                <a href="https://www.instagram.com/rajput____27_/"><i class="bi bi-instagram"></i></a>
             </div>
-            <a href="#" class="btn">Download CV</a>
+     <a href="https://docs.google.com/document/d/1yVOmZ5o9hk3fq_mCe0mJ4BZExEdKgr6z/edit?usp=drive_link&ouid=104140224471890731843&rtpof=true&sd=true" class="btn">Download CV</a>
         </div>
         <div class="home-img">
             <img src="images/photo1.jpg" alt="Profile Image">
